# chr2025-seeing-history-unseen

./: .gitignore  .nojekyll  AGENTS.html  AGENTS.md  ARCHIVE.html  ARCHIVE.md  CHANGELOG.html  CITATION.cff  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  LICENSE-AGPL.html  LICENSE-CCBY.html  README.md  README.template.html  SECURITY.html  SECURITY.md  TODO.html  TODO.md  _quarto.yml  example.env  index.qmd  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  report.html  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: changelog.yaml  quarto-publish.yml
abstract/: index.html  index.qmd  paper.aux  paper.bbl  paper.bcf  paper.blg  paper.out  paper.run.xml  paper.tex
analysis/: pairwise_tests.csv  rank_counts_per_model.csv  rank_counts_per_object.csv  ranking_tests_summary.csv  run_analysis.csv  time_stats_by_object.csv  time_stats_by_submission.csv
data/processed/: best_answers.csv  item_selection.csv  processed_survey_submissions.json  survey_rankings.csv
data/raw/: formspree_xrbyjror_2025-10-27T08_46_50_export.json
documentation/: notes.html  notes.md
examples/: README.md  benchmark_example.py  demo_structure.py
paper/: Rückmeldung Aline.html  Rückmeldung Aline.md  anthology-ch.cls  bibliography.bib  index.html  index.qmd  modelwahl.html  modelwahl.md  notes  paper.html  paper.md  paper.tex  todo.html
presentation/: README.md  index.html  index.pptx  index.qmd
project-management/: communication.html  people.html  project-report.html  tools.html
runs/20251017_112256/: alt_text_runs_20251017_112338.csv  alt_text_runs_20251017_112338.jsonl  manifest.json  metadata.json
runs/20251018_073618/: alt_text_runs_20251018_075820.csv  alt_text_runs_20251018_075820.jsonl  (+2 more)
src/: analyze_runs.py  analyze_survey_time.py  clean_survey_data.py  generate_alt_text.py  main.py  playground.html  playground.ipynb  process_best_answers.py  process_survey_rankings.py  ranking_tests.py  viz_dataset.py
survey/: form.html  index.qmd  questions.csv  survey.html
(+1305 files in other folders)
