[project]
name = "chr2025-seeing-history-unseen"
version = "0.1.0"
description = "CHR 2025 conference materials: Seeing History Unseen - Evaluating Vision-Language Models for WCAG-Compliant Alt-Text in Digital Heritage Collections"
authors = [
    { name = "Moritz Mähr", email = "" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "jupyter>=1.1.1",
    "openai>=2.4.0",
    "pandas>=2.2.0",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]
